[package]
name = "html_gen"
version = "0.1.0"
authors = ["David Castilla Ortiz <im@dcxo.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
colored = "2.0.0"
anyhow = "1.0.32"
regex = "1.3.9"
json = "0.12.4"

