[package]
name = "html_gen"
version = "0.5.0"
authors = ["David Castilla Ortiz <im@dcxo.dev>"]
description = "CLI tool to create static web pages using components"
repository = "https://github.com/dcxo/html_gen"
keywords = ["web_development", "components", "static_page"]
categories = ["web-programming", "template-engine"]
readme = "README.md"
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
colored = "2.0.0"
anyhow = "1.0.32"
json = "0.12.4"
html_parser = "0.4.2"
filepath = "0.1.1"
rsass = "0.13.0"
